unpackaged/main/default/objects/Scheduled_Notification__c/Scheduled_Notification__c.object-meta.xml
<CustomObject>
    <label>Scheduled Notification</label>
    <nameField>
        <label>Schedule Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>