unpackaged/main/default/objects/Scheduled_Notification__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scheduled Notifications</relationshipLabel>
    <relationshipName>Scheduled_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>